# hidapi

./: configure.ac  meson.build
hidtest/: meson.build
libusb/: meson.build
linux/: meson.build
mac/: hid.c  meson.build
windows/: meson.build
